交易系统添加
1：初始化页面时查询定价。
2：上传文件时，添加定价功能。
3：下载文件时，交换资金。注意，涉及事务管理
4：查询页面，添加定价信息显示。
5：修改book表，添加pay字段。
6：添加vip功能，并增加vip充值入口。（vip暂定为终身制度）
    初步实现方案
    1，撰写vip充值页面
    2，主页面中添加  会员  按钮，区分vip与非vip按钮样式。
    3，按钮点击后跳转至会员充值页面，如果为会员显示  已经为会员，非vip则显示充值按钮及vip效果。

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -160,3 +160,18 @@ form a{
     width: 99.6%;
     height: 96.7%;
 }
+
+.vipuser{
+    background-color: #e1ce1b;
+}
+
+#vipuser{
+    width: 100%;
+    height: 95%;
+    z-index: 100;
+}
+#normaluser{
+    width: 100%;
+    height: 95%;
+    z-index: 100;
+}
